[package]
name = "redis_utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.21", default-features = false, features = ["tokio-comp"] }
serde = "1.0"
serde_json = "1.0.44"
async-trait = "0.1.52"