[package]
name = "redis_utils"
version = "0.1.3"
edition = "2018"
license = "Unlicense"
description = "Cohesive helpers built on top of redis-rs"

[dependencies]
redis = { version = "0.21", default-features = false, features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
async-trait = "0.1.52"
